# bettergit

./: .coverage  AUTO_STASH_REMOVAL.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  README_clean.md  USAGE_GUIDE.md  all_changes.py  backtick_test.py  demo.py  final_save_test.py  history_test.py  instructions.md  interactive_test.py  pyproject.toml  recent_test.py  save_test_final.py  setup_dev.py  setup_unicode.py  single_quote_test.py  specification.md  test_file2.py  test_file3.py  test_file_for_save.py  test_final_save.py  test_new_save.py  test_save.py  test_save_no_history.py  timestamp_fix_test.py  very_recent.py
bettergit/: __init__.py  cli.py  config.py  history.py  ui.py
bettergit-demo/: README.md  config.yml  example.py
bettergit/core/: __init__.py  git.py
bettergit/integrations/: __init__.py  base.py  github.py
tests/: conftest.py  test_config.py  test_git.py
